static/css/bootcamp.css
@import url(https://fonts.googleapis.com/css?family=Audiowide);

body {
    padding-top: 80px;
    font-family: 'Libre Baskerville', serif;
    background-color: #F9F9F9;
}

a{
    color: #235789;
}

a:hover {
    color: grey;
    text-decoration: none;
}

header .navbar-brand {
  font-size: 1.4em;
  font-weight: 200;
  font-family: 'Libre Baskerville', serif;
}

.page-header {
  margin-top: 15px;
  margin-bottom: 15px;
}

.page-header h1 {
  margin: 0;
  font-weight: 100;
  font-size: 2em;
}

.no-data {
  text-align: center;
  padding: 1em 0;
}

#notifications {
  font-size: 1.5em;
  padding: 13px;
  color: #dddddd;
}

#notifications.new-notifications {
  color: #428bca;
}


.alert-debug {
  color: black;
  background-color: white;
  border-color: #d6e9c6;
}

.alert-error {
  color: #b94a48;
  background-color: #f2dede;
  border-color: #eed3d7;
}

.popover {
  max-width: 350px;
  width: 350px;
}

.popover ul {
  padding: 0;
  margin: 0;
}

.popover ul li {
  list-style: none;
  border-bottom: 1px solid #eeeeee;
  padding: .4em 0;
}

.popover ul li:last-child {
  border-bottom: none;
}

.popover ul li .user-picture {
  width: 45px;
  float: left;
}

.popover ul li p {
  font-size: .9em;
  padding: 0 0 0 .6em;
  margin-left: 45px;
  margin-bottom: 0;
}

blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}
blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}
blockquote p {
  display: inline;
}
.vertical-right-aligned {
    transform: rotate(-90deg);
    transform-origin: 100% 100%;
    position: fixed;
    right: 0;
    top: 50%;
    z-index: 100;
}
p img{
  max-width:100%;
  height:auto;
}

